<resources>

    <string name="app_name">PIPG Publicações</string>
    <string name="title_videos">Vídeos</string>
    <string name="title_audios">Áudios</string>
    <string name="title_boletins">Boletins</string>
    <string name="menu_settings">Configurações</string>
    <string name="title_activity_principal">PIPG</string>
    <!-- Controle de Download -->
    <string name="progress_dialog_title_downloading">Baixando...</string>
    <string name="progress_dialog_title_connecting">Conectando...</string>
    <string name="progress_dialog_message_prefix_downloading">Baixando arquivo...</string>
    <string name="user_message_update_list">Atualizando lista...</string>
    <string name="user_info_update_last_10">Últimos 10 boletins</string>
    <string name="user_info_update_all_of_them">Todos os boletins. Deve demorar um bocado...</string>
    <string name="progress_dialog_message_prefix_connecting">Conectando em: </string>
    <string name="user_message_download_complete">Download completo</string>
    <string name="user_message_download_canceled">Download cancelado</string>
    <string name="error_message_bad_url">Erro: URL inválida</string>
    <string name="error_message_file_not_found">Erro: Arquivo não encontrado no servidor</string>
    <string name="error_connection">Erro de conexão</string>
    <string name="error_message_general">Erro inesperado (inesperado mas aqui está você, lendo esta mensagem...)</string>
    <string name="error_no_pdf_application">Impossível abrir arquivo PDF</string>
    <string name="baixar">Baixar?</string>
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>

    <!-- Informações para o "Sobre" -->
    <string name="versao">1.2.0</string>
    <string name="dev_1">Ruither Borba: delki8\@gmail.com</string>
    <string name="dev_2">Eric Kriger: erickriger\@gmail.com</string>
    <string name="sobre_app">
        O \"PIPG Publicações\" foi desenvolvido como o propósito de 
        dinamizar o acesso às publicações do site da Primeira Igreja 
        Presbiteriana de Goiânia.	</string>
    <string name="codigo_fonte">code.google.com/p/pipg</string>
    <string name="rodape">
       <i> 
        \"Porque eu estou bem certo de que nem a morte, nem a vida, 
        nem os anjos, nem os principados, nem as coisas do presente, 
        nem do porvir, nem os poderes, nem a altura, nem a profundidade, 
        nem qualquer outra criatura poderá separar-nos do amor de Deus, 
        que está em Cristo Jesus, nosso Senhor.\" Romanos 8:38-39 
        </i>	</string>
       <string name="desenvolvido_por">Desenvolvido por:</string>
       <string name="descricao_label">Descrição:</string>
       <string name="btn_limpar">Limpar</string>
       <string name="mn_todos">Todos</string>
       <string name="mn_recentes">Recentes</string>
       <string name="btn_sobre">Sobre</string>	

</resources>