<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgLogoApp"
            android:layout_width="match_parent"
            android:layout_height="160dip"
            android:layout_marginTop="15dip"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_icon" />

        <TextView
            android:id="@+id/sobre_versao"
            style="@style/versao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/versao" />

        <TextView
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desenvolvido_por" />

        <TextView
            android:id="@+id/sobre_dev_1"
            style="@style/textoSobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dev_1" />

        <TextView
            android:id="@+id/sobre_dev_2"
            style="@style/textoSobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dev_2" />

        <TextView
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao_label" />

        <TextView
            android:id="@+id/sobre_sobre"
            style="@style/textoSobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sobre_app" />

        <!-- filler -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sobre_rodape"
                style="@style/textoSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rodape" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>