<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/navigationrefresh"
        android:showAsAction="always">
        <menu xmlns:android="http://schemas.android.com/apk/res/android" >
            <item
                android:id="@+id/menu_refresh_recentes"
                android:icon="@drawable/av_download"
                android:showAsAction="always"
                android:title="@string/mn_recentes"/>
            <item
                android:id="@+id/menu_refresh_todos"
                android:icon="@drawable/av_download"
                android:showAsAction="always"
                android:title="@string/mn_todos"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_limpar"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/btn_limpar"/>
<!--     <item
        android:id="@+id/menu_inserir"
        android:icon="@drawable/collectionsviewaslist"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="Inserir Testes"/> -->
    <item
        android:id="@+id/menu_sobre"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="never"
        android:title="@string/btn_sobre"/>

</menu>