<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dip"
        android:src="@drawable/app_icon" />

    <TextView
        android:id="@+id/sobre_versao"
        style="@style/textoSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/versao" />

    <TextView
        android:id="@+id/sobre_dev"
        style="@style/textoSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/sobre_contato"
        style="@style/textoSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/sobre_sobre"
        style="@style/textoSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sobre_app" />
    
    <TextView
        android:id="@+id/sobre_rodape"
        style="@style/textoSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/rodape" />

</LinearLayout>